--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Hello from GitHub, deployed via Argo CD on K3s!</h1>
+    <h1>Dit is een nieuwe test</h1>
   </body>
 </html>
