--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <body>
-    <h1>Dit is gepusht met GitHub!</h1>
-    <h2>HPA en Limiet toegevoegd!</h2>
+    <h1>Dit is mijn project!</h1>
   </body>
 </html>
