--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <body>
-    <h1>Dit is mijn project!</h1>
-    <h2>Hallo ik ben aangepast.</h2>
-  </body>
+    <h1>Dit is mijn project! Ik ben veranderd.</h1>
+   </body>
 </html>
